--- a/app/src/main/res/layout/item_basket.xml
+++ b/app/src/main/res/layout/item_basket.xml
@@ -7,20 +7,26 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:minHeight="@dimen/preview_item_image_height"
+    android:maxHeight="@dimen/preview_item_image_height">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/pizza_placeholder_image_180x180"
+    <LinearLayout
+        android:layout_width="@dimen/preview_item_image_height"
+        android:layout_height="@dimen/preview_item_image_height"
+        android:id="@+id/item_basket_image_container"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/item_basket_image"
-        android:adjustViewBounds="true"
-        android:cropToPadding="false"
-        android:minHeight="@dimen/preview_item_image_height"
-        android:maxHeight="@dimen/preview_item_image_height"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:gravity="center">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/pizza_placeholder_image_180x180"
+            android:id="@+id/item_basket_image"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false" />
+    </LinearLayout>
 
     <TextView
         android:text="@string/report_as_a_bug"
@@ -30,9 +36,9 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/item_basket_image"
+        android:layout_toEndOf="@+id/item_basket_image_container"
         android:layout_alignParentRight="true"
-        android:layout_toRightOf="@+id/item_basket_image" />
+        android:layout_toRightOf="@+id/item_basket_image_container" />
 
 
     <TextView
@@ -43,8 +49,8 @@
         android:id="@+id/item_basket_description"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
         android:layout_below="@+id/item_basket_title"
-        android:layout_toRightOf="@+id/item_basket_image"
-        android:layout_toEndOf="@+id/item_basket_image"
+        android:layout_toRightOf="@+id/item_basket_image_container"
+        android:layout_toEndOf="@+id/item_basket_image_container"
         android:maxLines="5"
         android:ellipsize="end"/>
 
@@ -54,8 +60,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/item_basket_sauces_container"
         android:layout_below="@+id/item_basket_description"
-        android:layout_toEndOf="@+id/item_basket_image"
-        android:layout_toRightOf="@+id/item_basket_image"
+        android:layout_toEndOf="@+id/item_basket_image_container"
+        android:layout_toRightOf="@+id/item_basket_image_container"
         android:layout_centerInParent="true">
     </LinearLayout>
 
