--- a/app/src/main/res/layout/item_preview.xml
+++ b/app/src/main/res/layout/item_preview.xml
@@ -8,20 +8,26 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:minHeight="@dimen/preview_item_image_height"
+    android:maxHeight="@dimen/preview_item_image_height">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/pizza_placeholder_image_180x180"
+    <LinearLayout
+        android:layout_width="@dimen/preview_item_image_height"
+        android:layout_height="@dimen/preview_item_image_height"
+        android:id="@+id/item_preview_image_container"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/item_preview_image"
-        android:adjustViewBounds="true"
-        android:cropToPadding="false"
-        android:minHeight="@dimen/preview_item_image_height"
-        android:maxHeight="@dimen/preview_item_image_height"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:gravity="center">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/pizza_placeholder_image_180x180"
+            android:id="@+id/item_preview_image"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false" />
+    </LinearLayout>
 
     <TextView
         android:text="@string/pizza_placeholder_title"
@@ -31,9 +37,9 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/item_preview_image"
+        android:layout_toEndOf="@+id/item_preview_image_container"
         android:layout_alignParentRight="true"
-        android:layout_toRightOf="@+id/item_preview_image" />
+        android:layout_toRightOf="@+id/item_preview_image_container" />
 
     <TextView
         android:text="@string/report_as_a_bug"
@@ -43,8 +49,8 @@
         android:id="@+id/item_description"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
         android:layout_below="@+id/item_preview_title"
-        android:layout_toRightOf="@+id/item_preview_image"
-        android:layout_toEndOf="@+id/item_preview_image"
+        android:layout_toRightOf="@+id/item_preview_image_container"
+        android:layout_toEndOf="@+id/item_preview_image_container"
         android:ellipsize="end"/>
 
     <TextView
@@ -53,7 +59,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/item_preview_price"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:layout_alignBottom="@+id/item_preview_image"
+        android:layout_alignBottom="@+id/item_preview_image_container"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         tools:layout_alignBottom="@+id/item_description" />
