--- a/app/src/main/res/layout/fragment_account_start.xml
+++ b/app/src/main/res/layout/fragment_account_start.xml
@@ -91,6 +91,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/account_save_info"
-        android:background="@color/colorAccent"/>
+        android:background="@color/colorAccent"
+        android:layout_weight="0.07" />
 
 </LinearLayout>
