--- a/app/src/main/res/layout/basket_empty.xml
+++ b/app/src/main/res/layout/basket_empty.xml
@@ -36,6 +36,7 @@
             android:text="@string/basket_empty_goto_pizza"
             android:id="@+id/empty_basket_button"
             android:background="@color/colorAccent"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:padding="@dimen/activity_horizontal_margin"/>
     </LinearLayout>
 </FrameLayout>
