--- a/app/src/main/res/layout/fragment_delivery_info.xml
+++ b/app/src/main/res/layout/fragment_delivery_info.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical" android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="match_parent">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -21,7 +22,11 @@
             android:gravity="center_vertical"
             android:fontFamily="sans-serif-smallcaps"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp" />
+            android:paddingRight="10dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="12dp" />
 
     </RelativeLayout>
 </ScrollView>
