--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/basket_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -39,13 +40,13 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"/>
-        <Button
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:text="@string/item_details_buy"
             android:id="@+id/basket_buy_button"
-            android:background="@color/colorAccent"
-            android:layout_gravity="end"/>
+            android:layout_gravity="end"
+            app:srcCompat="@drawable/ic_send_black_24dp"
+            android:background="@null" />
     </LinearLayout>
 </LinearLayout>
